# AIclipper

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  check_db.py  pyproject.toml  start.bat  start.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: __init__.py
backend/api/: __init__.py  app.py  deps.py  schemas.py
backend/api/routes/: __init__.py  clips.py  processing.py  publishing.py  settings.py  videos.py
backend/database/: __init__.py  crud.py  engine.py  models.py
backend/database/migrations/: env.py
backend/models/: __init__.py
backend/services/: audio_analysis.py  clip_generator.py  clip_scoring.py  face_tracking.py  ingestion.py  metadata_generator.py  pipeline.py  scene_detection.py  subtitles.py  thumbnail_generator.py  transcription.py
backend/services/uploaders/: __init__.py  base.py  facebook.py  registry.py  youtube.py
backend/utils/: __init__.py  config.py  download_models.py  ffmpeg.py  logging.py  validators.py
backend/workers/: consumer.py  tasks.py
configs/: default.yaml  logging.yaml
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: api.md  architecture.md  deployment.md  setup.md
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js  components.js
tests/: conftest.py
tests/test_api/: test_clips.py  test_processing.py  test_videos.py
tests/test_services/: test_clip_scoring.py  test_subtitles.py
