[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aiclipper"
version = "1.0.0"
description = "AI-powered local video clipping platform for generating short-form vertical content"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12,<3.13"
authors = [
    {name = "AIClipper Team"}
]

dependencies = [
    # Web Framework
    "fastapi[standard]>=0.136",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",

    # Task Queue
    "huey>=2.5",
    "peewee>=3.17",

    # Video Processing
    "scenedetect>=0.7",
    "opencv-python>=4.10",

    # AI / ML
    "pywhispercpp>=1.5",
    "mediapipe>=0.10.14",
    "librosa>=0.10",
    "ollama>=0.3",

    # Upload APIs
    "google-api-python-client>=2.140",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "requests>=2.32",

    # Utilities
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pillow>=10.4",
    "numpy>=1.26",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
]
openai = [
    "openai>=1.30",
]
gemini = [
    "google-generativeai>=0.7",
]
deepseek = [
    "openai>=1.30",  # DeepSeek uses OpenAI-compatible API
]
all-llm = [
    "ollama>=0.3",
    "openai>=1.30",
    "google-generativeai>=0.7",
]

[project.scripts]
aiclipper = "backend.api.app:main"

[tool.setuptools.packages.find]
include = ["backend*", "frontend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=backend --cov-report=term-missing"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
